# obs-realsense-depth-source

./: CMakeLists.txt  LICENSE  README.md  rs-depth-source.cpp  rs-depth-source.rc
data/locale/: en-US.ini
